--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/icons/skull.svg
+      - assets/icons/victory.svg
+      - assets/icons/defeat.svg
+      - assets/icons/reset.svg
+      - assets/images/monkey.jpg
+      - assets/images/dogs.jpg
+      - assets/images/serious_cat.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   
